--- a/bower.json
+++ b/bower.json
@@ -55,7 +55,8 @@
     "angular-xeditable": "~0.5.0",
     "ng-js-tree": "~0.0.7",
     "angular-ui-select": "^0.19.6",
-    "angular-local-storage": "^0.5.2"
+    "angular-local-storage": "^0.5.2",
+    "lz-string": "^1.4.4"
   },
   "resolutions": {
     "angular": "~1.5.9",
