--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-<<<<<<< HEAD
             "type": "node",
             "request": "launch",
             "name": "e2e Tests",
@@ -13,34 +12,20 @@
             "args": [
                 "${workspaceRoot}/proctConfig.js"
             ],
-            "outFiles": [
-                
-            ]
-=======
+            "outFiles": []
+        },
+        {
             "name": "node gulp.js",
+            "request": "launch",
             "type": "node",
             "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
             "stopOnEntry": true,
-            "args": ["default"],
+            "args": [
+                "default"
+            ],
             "cwd": "${workspaceRoot}",
             "runtimeExecutable": null,
-            "env": {
-                
-            }
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}"
->>>>>>> 4def5f86f3d7eeb7776e44704c0113b266a03c8c
-        },
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach to Port",
-            "address": "localhost",
-            "port": 5858
+            "env": {}
         }
     ]
 }
