--- a/bower.json
+++ b/bower.json
@@ -58,7 +58,8 @@
     "angular-local-storage": "^0.5.2",
     "lz-string": "^1.4.4",
     "angular-messages": "^1.6.4",
-    "angular-ui-grid": "^4.0.4"
+    "angular-ui-grid": "^4.0.4",
+    "angular-base64-upload": "^0.1.22"
   },
   "resolutions": {
     "angular": "~1.5.9",
