--- a/bower.json
+++ b/bower.json
@@ -59,7 +59,8 @@
     "lz-string": "^1.4.4",
     "angular-messages": "^1.6.4",
     "angular-ui-grid": "^4.0.4",
-    "angular-chosen-js": "^1.3.3"
+    "angular-chosen-js": "^1.3.3",
+    "js-xlsx": "^0.9.12"
   },
   "resolutions": {
     "angular": "~1.5.9",
