--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp-minify-html": "~1.0.4",
     "gulp-ng-annotate": "~2.0.0",
     "gulp-prompt": "^0.2.0",
-    "gulp-protractor": "~3.0.0",
+    "gulp-protractor": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "~0.5.4",
     "gulp-rev": "~7.1.2",
