--- a/bower.json
+++ b/bower.json
@@ -62,7 +62,8 @@
     "angular-chosen-js": "^1.3.3",
     "js-xlsx": "^0.9.12",
     "angular-base64-upload": "^0.1.22",
-    "angular-ui-indeterminate": "^1.0.0"
+    "angular-ui-indeterminate": "^1.0.0",
+    "angularjs-datepicker": "^2.1.19"
   },
   "resolutions": {
     "angular": "~1.5.9",
