--- a/bower.json
+++ b/bower.json
@@ -63,7 +63,8 @@
     "js-xlsx": "^0.9.12",
     "angular-base64-upload": "^0.1.22",
     "angular-ui-indeterminate": "^1.0.0",
-    "angularjs-datepicker": "^2.1.19"
+    "angularjs-datepicker": "^2.1.19",
+    "angular-jquery-timepicker": "^0.12.0"
   },
   "resolutions": {
     "angular": "~1.5.9",
