--- a/bower.json
+++ b/bower.json
@@ -66,7 +66,8 @@
     "angularjs-datepicker": "^2.1.19",
     "angular-jquery-timepicker": "^0.12.0",
     "ng-scrollbars": "^0.0.11",
-    "jquery.scrollbar": "^0.2.11"
+    "jquery.scrollbar": "^0.2.11",
+    "CSV-JS": "csv-js#^1.1.1"
   },
   "resolutions": {
     "angular": "~1.5.9",
