--- a/bower.json
+++ b/bower.json
@@ -67,7 +67,10 @@
     "angular-jquery-timepicker": "^0.12.0",
     "ng-scrollbars": "^0.0.11",
     "jquery.scrollbar": "^0.2.11",
-    "CSV-JS": "csv-js#^1.1.1"
+    "CSV-JS": "csv-js#^1.1.1",
+    "angular-ui-mask": "^1.8.7",
+    "teljs": "^1.3.3",
+    "angular-ui-bootstrap-datetimepicker": "^2.5.0"
   },
   "resolutions": {
     "angular": "~1.5.9",
