--- a/bower.json
+++ b/bower.json
@@ -70,7 +70,9 @@
     "CSV-JS": "csv-js#^1.1.1",
     "angular-ui-mask": "^1.8.7",
     "teljs": "^1.3.3",
-    "angular-ui-bootstrap-datetimepicker": "^2.5.0"
+    "angular-ui-bootstrap-datetimepicker": "^2.5.0",
+    "bootstrap-datepicker": "^1.6.4",
+    "angular-moment-picker": "moment-picker#^0.10.1"
   },
   "resolutions": {
     "angular": "~1.5.9",
