--- a/bower.json
+++ b/bower.json
@@ -72,7 +72,8 @@
     "teljs": "^1.3.3",
     "angular-ui-bootstrap-datetimepicker": "^2.5.0",
     "bootstrap-datepicker": "^1.6.4",
-    "angular-moment-picker": "moment-picker#^0.10.1"
+    "angular-moment-picker": "moment-picker#^0.10.1",
+    "angular-input-masks": "^2.6.0"
   },
   "resolutions": {
     "angular": "~1.5.9",
