--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.1.4",
+    "angularjs-slider": "^6.2.2",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^6.10.3"
   }
