added login page:dj

--- a/bower.json
+++ b/bower.json
@@ -74,7 +74,8 @@
     "bootstrap-datepicker": "^1.6.4",
     "angular-moment-picker": "moment-picker#^0.10.1",
     "angular-input-masks": "^2.6.0",
-    "angularjs-slider": "^6.2.2"
+    "angularjs-slider": "^6.2.2",
+    "ng-idle": "^1.3.2"
   },
   "resolutions": {
     "angular": "~1.5.9",
