--- a/bower.json
+++ b/bower.json
@@ -77,7 +77,8 @@
     "angularjs-slider": "^6.2.2",
     "ng-idle": "^1.3.2",
     "angular-loading-bar": "^0.9.0",
-    "ng-knob": "^0.1.3"
+    "ng-knob": "^0.1.3",
+    "angular-translate": "^2.17.0"
   },
   "resolutions": {
     "angular": "~1.5.9",
