--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "eslint-plugin-angular": "~0.12.0",
     "eslint-plugin-react": "^6.10.3",
     "estraverse": "~4.2.0",
-    "gulp": "~3.9.0",
     "gulp-angular-filesort": "~1.1.1",
     "gulp-angular-templatecache": "~2.0.0",
     "gulp-autoprefixer": "~3.1.1",
@@ -25,11 +24,11 @@
     "gulp-ng-annotate": "~2.0.0",
     "gulp-prompt": "^0.2.0",
     "gulp-protractor": "^3.0.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.2.3",
     "gulp-replace": "~0.5.4",
     "gulp-rev": "~7.1.2",
-    "gulp-rev-replace": "~0.4.2",
-    "gulp-sass": "~2.3.2",
+    "gulp-rev-replace": "^0.4.4",
+    "gulp-sass": "~3.1.0",
     "gulp-shell": "^0.5.2",
     "gulp-size": "~2.1.0",
     "gulp-sourcemaps": "~1.6.0",
@@ -39,7 +38,7 @@
     "gulp-zip": "^3.0.2",
     "http-proxy-middleware": "~0.17.2",
     "jasmine-spec-reporter": "^4.0.0",
-    "lodash": "~4.17.2",
+    "lodash": "^4.17.10",
     "main-bower-files": "~2.13.1",
     "uglify-save-license": "~0.4.1",
     "wiredep": "~4.0.0",
@@ -50,9 +49,11 @@
   },
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.1.4",
-    "angularjs-slider": "^6.4.3",
+    "angularjs-slider": "^6.5.1",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "gulp": "^3.9.1",
+    "natives": "^1.1.4",
     "xlsx-workbook": "^1.0.3"
   }
 }
