--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.1.4",
     "angular-material": "^1.1.10",
+    "angular-moment-picker": "^0.10.2",
     "angularjs-slider": "^6.5.1",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^6.10.3",
