--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.1.4",
     "angularjs-slider": "^6.4.3",
+    "bower": "^1.8.4",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^6.10.3",
     "xlsx-workbook": "^1.0.3"
