--- a/bower.json
+++ b/bower.json
@@ -78,7 +78,8 @@
     "ng-idle": "^1.3.2",
     "angular-loading-bar": "^0.9.0",
     "ng-knob": "^0.1.3",
-    "angular-translate": "^2.17.0"
+    "angular-translate": "^2.17.0",
+    "pdfmake": "^0.1.37"
   },
   "resolutions": {
     "angular": "~1.5.9",
