--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "angular-base64": "^2.0.5",
     "angular-bootstrap-datetimepicker": "^1.1.4",
     "angular-material": "^1.1.10",
     "angular-moment-picker": "^0.10.2",
