--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,7 @@
     "slimScroll": "jquery-slimscroll#~1.3.6",
     "angular-progress-button-styles": "~0.1.0",
     "angular-ui-router": "~0.3.2",
-    "angular-chart.js": "~1.0.3",
+    "angular-chart.js": "^1.1.1",
     "angular-chartist.js": "~3.3.12",
     "chartist": "0.9.5",
     "angular-morris-chart": "~1.1.0",
