--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-size": "~2.1.0",
     "gulp-sourcemaps": "~1.6.0",
     "gulp-uglify": "~2.0.0",
-    "gulp-useref": "~1.3.0",
+    "gulp-useref": "^1.3.0",
     "gulp-util": "~3.0.6",
     "gulp-zip": "^3.0.2",
     "http-proxy-middleware": "~0.17.2",
