--- a/bower.json
+++ b/bower.json
@@ -79,7 +79,8 @@
     "angular-loading-bar": "^0.9.0",
     "ng-knob": "^0.1.3",
     "angular-translate": "^2.17.0",
-    "pdfmake": "^0.1.37"
+    "pdfmake": "^0.1.37",
+    "angular-material": "^1.1.10"
   },
   "resolutions": {
     "angular": "~1.5.9",
