--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-size": "~2.1.0",
     "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~2.0.0",
+    "gulp-uglify": "^2.0.1",
     "gulp-useref": "^1.3.0",
     "gulp-util": "~3.0.6",
     "gulp-zip": "^3.0.2",
@@ -53,6 +53,7 @@
     "angular-moment-picker": "^0.10.2",
     "angularjs-slider": "^6.5.1",
     "bower": "^1.8.4",
+    "bower-installer": "^1.3.6",
     "es6-promise": "^4.2.4",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^6.10.3",
